--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ select {
     }
   }
 
+body {
+  color: hsl(var(--clr-white));
+}
+
 /* ---------------- */
 /* Utilities        */
 /* ---------------- */
@@ -84,6 +88,11 @@ ul {
     gap: var(--gap, 1rem);
   }
 
+.flex-column {
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .container {
 padding-inline: 2em; /* similar to padding: 0 2em; */
 margin-inline: auto; /* similar to margin: 0 auto; */
@@ -92,17 +101,25 @@ min-height: 40vh;
 position: relative
 }
 
+.border {
+  border: 1px solid var(--color, red);
+}
+
 .email-wrapper {
-    background-color: var(--clr-yellow);
-    /* background-image: url('Email-Sig.png'); */
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url('Group-9.png');
 }
 
 .links {
-    position: absolute;
-    bottom: 0;
-    left: 1rem;
+  margin: 0;
+  padding: 0;
+}
+
+.title {
+  font-size: var(--fs-700);
+}
+
+.text {
+  font-size: var(--fs-400);
 }
 
 @media (min-width: 1070px) {
